# reimagined-octo-tribble

./: README.md  meson.build
error/: log_error.c  log_error.h  stopif.c  stopif.h
include/: rot_arena.h  rot_math.h  rot_nn.h  rot_platform.h
math/: rot_math.c
memory/: rot_arena.c
nn/: rot_nn.c
platform/: cudnn.c  cudnn.h  math.h  miopen.c  miopen.h
tests/: min_unit.c  min_unit.h  test_cudnn.c  test_cudnn.h  test_math.c  test_math.h  test_miopen.c  test_miopen.h
